Bug 1899598 - Hide the horizontal tab strip when vertical tabs are enabled. r=mconley,desktop-theme-reviewers,tabbrowser-reviewers,sidebar-reviewers,emilio,willdurand,sclements
* Remove the #titlebar element, and ensure toolbars that comprise the titlebar get a .browser-titlebar class
* Ensure we call TabBarVisibility.update when initializing with verticalTab=true
* Adjust TabBarVisibility logic so we allow for the vertical tabs case
* Give #navigator-toolbar z-index: var(--browser-area-z-index-toolbox) to ensure the urlbar view doesnt get clipped behind the lower elements

Differential Revision: https://phabricator.services.mozilla.com/D222059

--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -124,6 +124,12 @@ body {
   appearance: none;
   z-index: var(--browser-area-z-index-toolbox);
 
+  /* stylelint-disable-next-line media-query-no-invalid */
+  @media (-moz-bool-pref: "sidebar.verticalTabs") {
+    /* Should paint on top of our sibling #browser (even when preceding it in the DOM) */
+    z-index: var(--browser-area-z-index-toolbox);
+  }
+
   background-color: var(--toolbox-non-lwt-bgcolor);
   color: var(--toolbox-non-lwt-textcolor);
 
@@ -178,7 +184,7 @@ body {
 
 /* Title bar */
 
-#titlebar {
+.browser-titlebar {
   -moz-window-dragging: drag;
 
   :root[tabsintitlebar] & {
@@ -206,7 +212,7 @@ body {
     }
   }
 
-  #toolbar-menubar[autohide="true"]:not([inactive]) + #TabsToolbar > & {
+  #toolbar-menubar[autohide="true"]:not([inactive]) ~ :is(#TabsToolbar, #nav-bar) > & {
     visibility: hidden;
   }
 
@@ -242,10 +248,15 @@ body {
   }
 }
 
-/* Hide the TabsToolbar titlebar controls if the menubar is permanently shown.
+/* Hide the TabsToolbar/nav-bar titlebar controls if the menubar is permanently shown.
  * (That is, if the menu bar doesn't autohide, and we're not in a fullscreen or
  * popup window.) */
-:root:not([chromehidden~="menubar"], [inFullscreen]) #toolbar-menubar[autohide="false"] + #TabsToolbar > :is(.titlebar-buttonbox-container, .titlebar-spacer) {
+:root:not([chromehidden~="menubar"], [inFullscreen]) #toolbar-menubar[autohide="false"] ~ :is(#TabsToolbar, #nav-bar) > :is(.titlebar-buttonbox-container, .titlebar-spacer) {
+  display: none;
+}
+
+/* Only show the titlebar buttons and spacers in the first visible toolbar */
+#nav-bar:not([tabs-hidden]) > :is(.titlebar-buttonbox-container, .titlebar-spacer) {
   display: none;
 }
 
